--- a/index.ipynb
+++ b/index.ipynb
@@ -30,13 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "roll_dice = None"
+    "from itertools import permutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roll_dice = ([1,2,3,4,5,6])"
    ]
   },
   {
@@ -48,13 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "event = None"
+    "event = ([5,6])"
    ]
   },
   {
@@ -66,13 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_5_6 = None\n",
+    "prob_5_6 = len(event)/len(roll_dice)\n",
     "prob_5_6  # 0.3333333333333333"
    ]
   },
@@ -95,11 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.randint(1,7) # you will get a random value between 1 and 6. See how it changes when you rerun"
@@ -115,18 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(12345) # to make sure there is no randomness\n",
     "\n",
-    "dice_10 = np.random.randint(1,7,size= None)\n",
-    "dice_1k = np.random.randint(1,7,size= None)\n",
-    "dice_1m = np.random.randint(1,7,size=None)\n",
-    "dice_100m = np.random.randint(1,7,size=None)"
+    "dice_10 = np.random.randint(1,7,size= 10)\n",
+    "dice_1k = np.random.randint(1,7,size= 1000)\n",
+    "dice_1m = np.random.randint(1,7,size=1000000)\n",
+    "dice_100m = np.random.randint(1,7,size=100000000)"
    ]
   },
   {
@@ -138,16 +159,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "event_10 = None\n",
-    "event_1k = None\n",
-    "event_1m = None\n",
-    "event_100m = None"
+    "event_10 = (dice_10>4)\n",
+    "event_1k = (dice_1k>4)\n",
+    "event_1m = (dice_1m>4)\n",
+    "event_100m = (dice_100m>4)"
    ]
   },
   {
@@ -159,16 +178,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0. , 0.1, 0.1, 0. , 0.1, 0. , 0.1, 0. , 0.1, 0. ]),\n",
+       " array([0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. ,\n",
+       "        0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0.1, 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. ,\n",
+       "        0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. , 0. ,\n",
+       "        0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. ,\n",
+       "        0.1, 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. , 0.1, 0.1, 0. , 0. , 0. ,\n",
+       "        0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0. ,\n",
+       "        0. , 0.1, 0.1, 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. , 0. , 0.1, 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0. , 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0. , 0. , 0. , 0.1, 0.1, 0. , 0.1, 0. , 0.1, 0.1, 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0.1, 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0. ,\n",
+       "        0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0.1, 0. ,\n",
+       "        0.1, 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1,\n",
+       "        0. , 0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0.1, 0.1,\n",
+       "        0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0. , 0. , 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0.1,\n",
+       "        0. , 0.1, 0. , 0. , 0.1, 0.1, 0.1, 0. , 0. , 0. , 0. , 0.1, 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. ,\n",
+       "        0.1, 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0. ,\n",
+       "        0. , 0.1, 0.1, 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. ,\n",
+       "        0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1,\n",
+       "        0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0.1, 0.1, 0. , 0. , 0. , 0. , 0.1, 0.1, 0. , 0.1, 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0.1, 0.1, 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0.1, 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0. , 0. , 0. ,\n",
+       "        0.1, 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0.1,\n",
+       "        0. , 0.1, 0.1, 0. , 0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0. , 0.1, 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. , 0.1, 0.1, 0. , 0. , 0.1,\n",
+       "        0. , 0. , 0.1, 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0. ,\n",
+       "        0. , 0.1, 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0.1, 0.1,\n",
+       "        0.1, 0.1, 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. ,\n",
+       "        0.1, 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. ,\n",
+       "        0.1, 0. , 0.1, 0.1, 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1,\n",
+       "        0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0.1,\n",
+       "        0.1, 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0.1, 0.1, 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0. , 0.1, 0. , 0. , 0. , 0.1, 0.1, 0.1, 0. , 0.1, 0.1,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0.1, 0.1, 0.1,\n",
+       "        0. , 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. , 0. , 0.1, 0. , 0. ,\n",
+       "        0. , 0. , 0. , 0.1, 0.1, 0.1, 0.1, 0. , 0. , 0.1, 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0. , 0. , 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0.1, 0. , 0. , 0. , 0.1, 0. ,\n",
+       "        0.1, 0. , 0. , 0.1, 0.1, 0.1, 0. , 0.1, 0. , 0. , 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0.1, 0. ,\n",
+       "        0. , 0.1, 0.1, 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0.1, 0. , 0. ,\n",
+       "        0. , 0.1, 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0.1,\n",
+       "        0. , 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1,\n",
+       "        0. , 0.1, 0. , 0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0. ,\n",
+       "        0. , 0. , 0.1, 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0.1, 0. , 0. ,\n",
+       "        0.1, 0. , 0.1, 0. , 0. , 0.1, 0. , 0. , 0. , 0.1, 0. , 0. , 0. ,\n",
+       "        0.1, 0. , 0. , 0.1, 0. , 0. , 0.1, 0. , 0.1, 0.1, 0. , 0. ]),\n",
+       " array([0.e+00, 1.e-06, 0.e+00, ..., 0.e+00, 1.e-06, 1.e-06]),\n",
+       " array([0.e+00, 0.e+00, 1.e-08, ..., 0.e+00, 1.e-08, 0.e+00]))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "prob_10 = None\n",
-    "prob_1k = None\n",
-    "prob_1m = None\n",
-    "prob_100m = None\n",
+    "prob_10 = event_10/10 \n",
+    "prob_1k = event_1k/10\n",
+    "prob_1m = event_1m/1000000\n",
+    "prob_100m = event_100m/100000000\n",
     "prob_10, prob_1k, prob_1m, prob_100m  # 0.5 0.331 0.333657 0.33329752"
    ]
   },
@@ -197,19 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "P_afr = None\n",
-    "P_ant = None\n",
-    "P_as = None\n",
-    "P_eur = None\n",
-    "P_na = None\n",
-    "P_aus = None\n",
-    "P_sa = None"
+    "P_afr = 0.161\n",
+    "P_ant = 0.000\n",
+    "P_as = 0.598\n",
+    "P_eur = 0.10\n",
+    "P_na = 0.079\n",
+    "P_aus = 0.005\n",
+    "P_sa = 0.057"
    ]
   },
   {
@@ -221,11 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.161 0.    0.598 0.1   0.079 0.005 0.057]\n"
+     ]
+    }
+   ],
    "source": [
     "continents = np.array([P_afr, P_ant, P_as, P_eur, P_na, P_aus, P_sa])\n",
     "print(continents)"
@@ -691,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
